#1 style: Set menu font style

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,11 @@ p {
   line-height: 1.6; /* 행간 */
 }
 
+a {
+  color: rgb(29, 29, 31);
+  text-decoration: none;
+}
+
 .global-nav,
 .local-nav {
   display: flex;
@@ -34,11 +39,18 @@ p {
   border-bottom: 1px solid #ddd;
 }
 
+.local-nav a {
+  font-size: 0.8rem;
+}
+
 /* local-nav a인데 not 키워드는 해당 조건을 만족하는 요소는 제외 */
 .local-nav a:not(.local-nav-item) {
   margin-left: 2em;
 }
 
-.local-nav-item {
+/* .local-nav a:first-child { */
+.local-nav .local-nav-item {
   margin-right: auto;
+  font-size: 1.4rem;
+  font-weight: bold;
 }
