--- a/css/main.css
+++ b/css/main.css
@@ -32,11 +32,13 @@ a {
 
 .global-nav {
   justify-content: space-between;
+  padding: 0 1rem;
 }
 
 .local-nav {
   height: 52px;
   border-bottom: 1px solid #ddd;
+  padding: 0 1rem;
 }
 
 .local-nav a {
@@ -53,4 +55,86 @@ a {
   margin-right: auto;
   font-size: 1.4rem;
   font-weight: bold;
+}
+
+.scroll-section {
+  padding-top: 50vh;
+}
+
+#scroll-section-0 h1 {
+  font-size: 4rem;
+  text-align: center;
+}
+
+.main-message {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+  justify-content: center;
+  height: 3em;
+  font-size: 2.5rem;
+}
+
+.main-message p {
+  font-weight: bold;
+  text-align: center;
+  line-height: 1.2;
+}
+
+.main-message small {
+  display: block;
+  margin-bottom: 0.5em;
+  font-size: 1.2rem;
+}
+
+#scroll-section-2 .main-message {
+  font-size: 3.5rem;
+}
+
+.description {
+  padding: 0 1rem;
+  font-size: 1.2rem;
+  color: #888;
+}
+
+.description strong {
+  float: left;
+  margin-right: 0.2em;
+  font-size: 3rem;
+  color: rgb(29, 29, 31);
+}
+
+.desc-message {
+  width: 50%;
+  font-weight: bold;
+}
+
+.pin {
+  width: 1px;
+  height: 100px;
+  background-color: rgb(29, 29, 31);
+}
+
+.mid-message {
+  padding: 0 1rem;
+  font-size: 2rem;
+  color: #888;
+}
+
+.mid-message strong {
+  color: rgb(29, 29, 31);
+}
+
+.canvas-caption {
+  padding: 0 1rem;
+  color: #888;
+  font-size: 1.2rem;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 7rem;
+  background-color: darkorange;
 }
