--- a/css/main.css
+++ b/css/main.css
@@ -31,11 +31,20 @@ a {
 }
 
 .global-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 44px;
   justify-content: space-between;
   padding: 0 1rem;
 }
 
 .local-nav {
+  position: absolute;
+  top: 45px;
+  left: 0;
+  width: 100%;
   height: 52px;
   border-bottom: 1px solid #ddd;
   padding: 0 1rem;
